--- a/ct.css
+++ b/ct.css
@@ -34,8 +34,8 @@ a.lab:link { color:#FFF; text-decoration:none; font-weight:normal; font-family:'
 a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
-.colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colb{width:50%; float:left; text-align:left;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -101,8 +101,8 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify;font-size:28px; color:rgba(51,51,51,0.7);}
-ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify; font-size:28px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify;font-size:22px; color:rgba(51,51,51,0.7);}
+ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify; font-size:22px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:5%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:90px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:18%; margin-bottom:2%;}
@@ -133,7 +133,7 @@ a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-fami
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 .colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -196,8 +196,8 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify;font-size:24px; color:rgba(51,51,51,0.7);}
-ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify; font-size:24px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify;font-size:19px; color:rgba(51,51,51,0.7);}
+ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify; font-size:19px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:5%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:90px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:25%; margin-bottom:2%;}
@@ -228,7 +228,7 @@ a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-fami
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 .colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -291,7 +291,7 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify;font-size:21px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify;font-size:20px; color:rgba(51,51,51,0.7);}
 ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify; font-size:20px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:10%;}
@@ -323,7 +323,7 @@ a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-fami
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 .colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -417,7 +417,7 @@ a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-fami
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 .colb{width:100%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
