--- a/ct.css
+++ b/ct.css
@@ -34,8 +34,8 @@ a.lab:link { color:#FFF; text-decoration:none; font-weight:normal; font-family:'
 a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
-.colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colb{width:50%; float:left; text-align:left;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -78,8 +78,8 @@ a.nc:active { color:rgba(235,235,235,1); text-decoration:none;}
 	padding-top:0.6%;
 	display:none;
 }
-.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:18px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
-.client{ font-family:'Roboto', sans-serif; font-weight:300; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
+.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:18px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); text-align:center; margin-top:5%;}
+.client{ font-family:'Roboto', sans-serif; font-weight:500; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);margin-bottom:8%;}
 /**************Navigation************/
 .foot{
 	width:100%;
@@ -95,14 +95,14 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 	width:50%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:20px; padding-top:1%; line-height:40px;
 	float:left;
 }
-.contact{ width:100%; padding:12%; color:rgba(51,51,51,0.7);}
+.contact{ width:auto; padding:12%; color:rgba(51,51,51,0.7);}
 
 @media only screen and (max-width: 1600px){
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify;font-size:28px; color:rgba(51,51,51,0.7);}
-ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify; font-size:28px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify;font-size:19px; color:rgba(51,51,51,0.7);}
+ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:40px; font-weight:500; text-align:justify; font-size:19px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:5%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:90px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:18%; margin-bottom:2%;}
@@ -132,8 +132,8 @@ a.lab:link { color:#FFF; text-decoration:none; font-weight:normal; font-family:'
 a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
-.colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colb{width:46%; float:left;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -172,8 +172,8 @@ a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-famil
 	padding-top:0%;
 	display:none;
 }
-.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:28px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
-.client{ font-family:'Roboto', sans-serif; font-weight:300; font-size:25px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
+.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:19px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); text-align:center;margin-top:5%;}
+.client{ font-family:'Roboto', sans-serif; font-weight:500; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); margin-bottom:5%;}
 /**************Navigation************/
 .foot{
 	width:100%;
@@ -189,15 +189,15 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 	width:50%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:28px; padding-top:1%; line-height:40px;
 	float:left;
 }
-.contact{ width:100%; padding:10%; color:rgba(51,51,51,0.7);}
+.contact{ width:auto; padding:10%; color:rgba(51,51,51,0.7);}
 }
 
 @media only screen and (max-width: 1300px){
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify;font-size:24px; color:rgba(51,51,51,0.7);}
-ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify; font-size:24px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify;font-size:19px; color:rgba(51,51,51,0.7);}
+ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:38px; font-weight:500; text-align:justify; font-size:19px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:5%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:90px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:25%; margin-bottom:2%;}
@@ -227,8 +227,8 @@ a.lab:link { color:#FFF; text-decoration:none; font-weight:normal; font-family:'
 a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
-.colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colb{width:46%; float:left;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -267,8 +267,8 @@ a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-famil
 	padding-top:0%;
 	display:none;
 }
-.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:24px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
-.client{ font-family:'Roboto', sans-serif; font-weight:300; font-size:20px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
+.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:19px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); text-align:center; margin-top:3%;}
+.client{ font-family:'Roboto', sans-serif; font-weight:500; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); margin-bottom:5%;}
 /**************Navigation************/
 .foot{
 	width:100%;
@@ -284,15 +284,15 @@ a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family
 	width:50%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:24px; padding-top:1%;
 	float:left;
 }
-.contact{ width:100%; padding:10%; color:rgba(51,51,51,0.7);}
+.contact{ width:auto; padding:10%; color:rgba(51,51,51,0.7);}
 }
 
 @media only screen and (max-width: 1024px){
 img{width:100%;}
 html,body{ height:100%; width:100%; padding:0px; margin:0px; position:relative; background-image:url(images/025.jpg); background-repeat:repeat; font-family:'Roboto', sans-serif;letter-spacing:0.3px; line-height:30px;}
 h1{ font-family:'Roboto', sans-serif; font-weight:300; text-transform:uppercase; margin-left:auto; margin-right:auto;}
-p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify;font-size:21px; color:rgba(51,51,51,0.7);}
-ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify; font-size:20px; color:rgba(51,51,51,0.7);}
+p{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify;font-size:19px; color:rgba(51,51,51,0.7);}
+ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px; font-weight:500; text-align:justify; font-size:19px; color:rgba(51,51,51,0.7);}
 .row:after,.row:before{display:table;content:" "}.row:after{clear:both}
 .space{ padding-top:10%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:90px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:25%; margin-bottom:10%;}
@@ -315,20 +315,20 @@ ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:30px;
 	padding-right:3%;
 }
 .jb{width:50%; margin-top:4%;}
-.bio{width:85%; margin-left:auto; margin-right:auto;}
+.bio{width:90%; margin-left:auto; margin-right:auto;}
 .bcol{ width:100%; float:none;}
 .btn{ border:1px solid white; text-shadow:rgba(51,51,51,0.9) 1px 1px 2px; border-radius:3px; padding:15px; display:inline-block; margin:20px; margin-top:5%; box-shadow:rgba(51,51,51,1) 1px 3px 10px; background-color:rgba(255,255,255,0.3); font-size:22px; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:link { color:#FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
-.colb{width:50%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colb{width:46%; float:left;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
 	position:fixed;
-	width:100%;
+	width:90%;
 	height:50px;
 	padding-left:5%;
 	padding-right:5%;
@@ -362,8 +362,8 @@ a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-famil
 	padding-top:0%;
 	display:none;
 }
-.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:24px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
-.client{ font-family:'Roboto', sans-serif; font-weight:300; font-size:20px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
+.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:19px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); text-align:center;}
+.client{ font-family:'Roboto', sans-serif; font-weight:500; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7); margin-bottom:5%;}
 /**************Navigation************/
 .foot{
 	width:100%;
@@ -376,10 +376,10 @@ a.fl:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-fa
 a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 /*****************Contact******************/
 .cont{
-	width:50%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:18.5px; padding-top:1%;
+	width:50%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:18px; padding-top:1%;
 	float:left;
 }
-.contact{ width:100%; padding:5%; color:rgba(51,51,51,0.7);}
+.contact{ width:90%; padding:5%; color:rgba(51,51,51,0.7);}
 }
 
 @media only screen and (max-device-width : 750px){
@@ -392,7 +392,7 @@ ul,li{ font-family:'Roboto', sans-serif; letter-spacing:0.3px; line-height:28px;
 .space{ padding-top:20%;}
 .label1{ font-family:'Roboto', sans-serif; font-weight:900; font-size:40px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase; text-shadow:rgba(51,51,51,1) 1px 5px 10px; margin-top:25%; margin-bottom:20%;}
 .label2{ font-family:'Roboto', sans-serif; font-weight:900; font-size:26px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase;color:rgba(165,42,42,1);}
-.label3{ font-family:'Roboto', sans-serif; font-weight:500; font-size:20px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase;color:rgba(165,42,42,1); text-align:center;}
+.label3{ font-family:'Roboto', sans-serif; font-weight:500; font-size:22px; margin-left:auto; margin-right:auto; display:inline-block; text-transform:uppercase;color:rgba(165,42,42,1); text-align:center;}
 .Lp{
 	width:100%;
 	background-image:/*url(images/clarisse-meyer-162874.jpg),*/ url(images/banner-2.jpg);
@@ -417,7 +417,7 @@ a.lab:visited { color: #FFF; text-decoration:none; font-weight:normal; font-fami
 a.lab:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 .colb{width:100%; float:left;}
-.colgap{ padding-left:5%; padding-right:5%;}
+.colgap{ padding-left:2%; padding-right:2%;}
 .1{ width:50%;}
 /**************Navigation************/
 .nav{
@@ -442,8 +442,8 @@ a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-famil
 	position:fixed;
 	width:100%;
 	height:5%;
-	padding-left:1%;
-	padding-right:1%;
+	padding-left:0%;
+	padding-right:0%;
 	margin-left:auto;
 	margin-right:auto;
 	font-family:'Roboto', sans-serif; font-weight:500;
@@ -456,8 +456,8 @@ a.lab:active { color: #FFF; text-decoration:none; font-weight:normal; font-famil
 	padding-top:0%;
 	display:block;
 }
-.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:18px; font-style:italic; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
-.client{ font-family:'Roboto', sans-serif; font-weight:300; font-size:16px; text-align:center; padding-left:5%; padding-right:5%;color:rgba(51,51,51,0.7);}
+.words{ font-family:'Roboto', sans-serif; font-weight:500; font-size:18px; font-style:italic; padding-left:2%; padding-right:2%;color:rgba(51,51,51,0.7); text-align:center;}
+.client{ font-family:'Roboto', sans-serif; font-weight:500; font-size:14.5px; text-align:center; padding-left:2%; padding-right:2%;color:rgba(51,51,51,0.7); margin-bottom:15%;}
 /**************Navigation************/
 .foot{
 	width:100%;
@@ -470,8 +470,8 @@ a.fl:hover { color: #FFF; text-decoration:underline; font-weight:normal; font-fa
 a.fl:active { color: #FFF; text-decoration:none; font-weight:normal; font-family:'Roboto', sans-serif; font-weight:300;}
 /*****************Contact******************/
 .cont{
-	width:100%; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:14px; padding-top:1%;
+	width:auto; font-family:'Roboto', sans-serif; font-weight:500; color:rgba(51,51,51,1); font-size:14px; padding-top:1%;
 	float:none;
 }
-.contact{ width:100%; padding:5%; color:rgba(51,51,51,0.7);}
+.contact{ width:auto; padding:5%; color:rgba(51,51,51,0.7);}
 }
